added temperature setting option

--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -8,9 +8,12 @@
         android:inputType="text"
         android:singleLine="true"/>
 
-    <CheckBoxPreference
+    <ListPreference
         android:key="@string/settings_temperature_key"
         android:title="@string/settings_temperature"
+        android:dialogTitle="@string/settings_temperature"
+        android:entries="@array/array_temperature"
+        android:entryValues="@array/array_temperature"
         android:defaultValue="@string/settings_temperature_default_val"/>
 
 </PreferenceScreen>
