--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -2,18 +2,18 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
     <EditTextPreference
-        android:key="@string/settings_location_key"
-        android:title="@string/settings_location"
-        android:defaultValue="@string/settings_location_default_val"
+        android:key="@string/pref_location_key"
+        android:title="@string/pref_location_label"
+        android:defaultValue="@string/pref_location_default"
         android:inputType="text"
         android:singleLine="true"/>
 
     <ListPreference
-        android:key="@string/settings_temperature_key"
-        android:title="@string/settings_temperature"
-        android:dialogTitle="@string/settings_temperature"
-        android:entries="@array/array_temperature"
-        android:entryValues="@array/array_temperature"
-        android:defaultValue="@string/settings_temperature_default_val"/>
+        android:key="@string/pref_units_key"
+        android:title="@string/pref_units_label"
+        android:dialogTitle="@string/pref_units_label"
+        android:entries="@array/pref_units_options"
+        android:entryValues="@array/pref_units_values"
+        android:defaultValue="@string/pref_units_metric"/>
 
 </PreferenceScreen>
