--- a/app/src/main/res/values-sw600dp/styles.xml
+++ b/app/src/main/res/values-sw600dp/styles.xml
@@ -6,7 +6,7 @@
     </style>
 
     <style name="ForecastView">
-
+        <item name="android:choiceMode">singleChoice</item>
     </style>
 
 </resources>
