--- a/app/src/main/res/drawable/touch_selector.xml
+++ b/app/src/main/res/drawable/touch_selector.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- State when a row is being pressed, but hasn't yet been activated (finger down) -->
     <item android:state_pressed="true"
-        android:drawable="@color/sunshine_light_blue" />
+        android:drawable="@color/grey" />
 
     <!-- When the view is "activated".  In SINGLE_CHOICE_MODE, it flags the active row
          of a ListView -->
