--- a/app/src/main/res/layout/fragment_detail_wide.xml
+++ b/app/src/main/res/layout/fragment_detail_wide.xml
@@ -1,11 +1,10 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/scrollView" >
 
     <LinearLayout
-
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -13,7 +12,7 @@
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:gravity="center_horizontal"
-        tools:context="com.example.sunshine.DetailActivity$PlaceholderFragment"
+        tools:context=".DetailFragment"
         android:orientation="vertical">
 
         <LinearLayout
@@ -26,12 +25,14 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/detail_day_textview"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    tools:text="text"
                     android:textAppearance="?android:attr/textAppearanceMedium" />
 
                 <TextView
@@ -39,6 +40,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
+                    tools:text="text"
                     android:layout_marginBottom="2dp" />
 
             </LinearLayout>
@@ -47,25 +49,22 @@
                 android:orientation="vertical"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:gravity="center">
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="@string/format_temperature"
                     android:id="@+id/text_view_high_detail_fragment"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical" />
-
-                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="@string/format_temperature"
+                    tools:text="@string/format_temperature" />
+
+                <TextView
                     android:id="@+id/low_text_view_detail_fragment"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical" />
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    tools:text="@string/format_temperature" />
 
             </LinearLayout>
 
@@ -80,14 +79,15 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/icon_detail_fragment"
-                    android:layout_gravity="center_horizontal" />
+                    tools:src="@mipmap/ic_launcher" />
 
                 <TextView
+                    android:id="@+id/desc_text_view_detail_fragment"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:id="@+id/desc_text_view_detail_fragment"
-                    android:layout_gravity="center_horizontal" />
+                    tools:text="text" />
+
             </LinearLayout>
 
         </LinearLayout>
@@ -98,27 +98,27 @@
             android:orientation="vertical">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/humidity"
                 android:id="@+id/humidity_text_view"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:layout_marginBottom="2dp" />
-
-            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/wind"
+                android:layout_marginBottom="2dp"
+                tools:text="@string/humidity"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+
+            <TextView
                 android:id="@+id/wind_text_view_detail_fragment"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:layout_marginBottom="2dp" />
-
-            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/pressure"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:id="@+id/pressure_text_view_detail_fragment" />
+                android:layout_marginBottom="2dp"
+                tools:text="@string/wind"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+
+            <TextView
+                android:id="@+id/pressure_text_view_detail_fragment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="@string/pressure"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
 
         </LinearLayout>
 
