--- a/app/src/main/res/layout/fragment_detail_wide.xml
+++ b/app/src/main/res/layout/fragment_detail_wide.xml
@@ -2,123 +2,114 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/scrollView" >
+    android:fillViewport="true"
+    tools:context=".DetailFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:gravity="center_horizontal"
-        tools:context=".DetailFragment"
-        android:orientation="vertical">
+        android:padding="@dimen/activity_vertical_margin"
+        android:orientation="horizontal">
 
         <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="2dp">
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:orientation="vertical">
+            android:orientation="vertical"
+            android:minWidth="56dp">
 
                 <TextView
                     android:id="@+id/detail_day_textview"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:minWidth="120dp"
                     tools:text="text"
-                    android:textAppearance="?android:attr/textAppearanceMedium" />
+                    android:fontFamily="sans-serif-condensed"
+                    android:textSize="24sp" />
 
                 <TextView
                     android:id="@+id/date_text_view_detail_fragment"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:fontFamily="sans-serif-condensed"
+                    android:textSize="20sp"
                     tools:text="text"
-                    android:layout_marginBottom="2dp" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center">
-
-                <TextView
-                    android:id="@+id/text_view_high_detail_fragment"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    tools:text="@string/format_temperature" />
-
-                <TextView
-                    android:id="@+id/low_text_view_detail_fragment"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    tools:text="@string/format_temperature" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:layout_weight="1">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/icon_detail_fragment"
-                    tools:src="@mipmap/ic_launcher" />
-
-                <TextView
-                    android:id="@+id/desc_text_view_detail_fragment"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    tools:text="text" />
-
-            </LinearLayout>
+                    android:textColor="@color/grey_700" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginLeft="16dp">
+
+            <TextView
+                android:id="@+id/text_view_high_detail_fragment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-condensed"
+                android:textSize="96sp"
+                tools:text="@string/format_temperature" />
+
+            <TextView
+                android:id="@+id/low_text_view_detail_fragment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:textSize="48sp"
+                android:textColor="@color/grey_700"
+                tools:text="@string/format_temperature" />
 
             <TextView
                 android:id="@+id/humidity_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="2dp"
+                android:layout_marginTop="4dp"
+                android:fontFamily="sans-serif-condensed"
                 tools:text="@string/humidity"
-                android:textAppearance="?android:attr/textAppearanceMedium" />
+                android:textAppearance="?android:textAppearanceLarge" />
 
             <TextView
                 android:id="@+id/wind_text_view_detail_fragment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="2dp"
+                android:fontFamily="sans-serif-condensed"
+                android:layout_marginTop="4dp"
                 tools:text="@string/wind"
-                android:textAppearance="?android:attr/textAppearanceMedium" />
+                android:textAppearance="?android:textAppearanceLarge" />
 
             <TextView
                 android:id="@+id/pressure_text_view_detail_fragment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:fontFamily="sans-serif-condensed"
                 tools:text="@string/pressure"
-                android:textAppearance="?android:attr/textAppearanceMedium" />
+                android:textAppearance="?android:textAppearanceLarge" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:layout_marginLeft="16dp"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/icon_detail_fragment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:src="@mipmap/ic_launcher" />
+
+            <TextView
+                android:id="@+id/desc_text_view_detail_fragment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-condensed"
+                android:textColor="@color/grey_700"
+                android:textAppearance="?android:textAppearanceLarge"
+                tools:text="text" />
 
         </LinearLayout>
 
