--- a/app/src/main/res/layout/list_item_forecast_today.xml
+++ b/app/src/main/res/layout/list_item_forecast_today.xml
@@ -1,62 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:gravity="center_vertical"
     android:minHeight="?android:attr/listPreferredItemHeight"
-    android:background="@drawable/touch_selector"
+    android:background="@drawable/today_touch_selector"
     android:padding="16dp">
 
     <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:gravity="center_vertical"
-        android:layout_weight="1">
+        android:layout_weight="7"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginLeft="6dp">
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="New Text"
             android:id="@+id/list_item_date_textview"
-            android:gravity="center" />
-
-        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="New Text"
+            tools:text="New Text"
+            android:textAppearance="?android:textAppearanceLarge"
+            android:fontFamily="sans-serif-condensed"
+            android:textColor="@color/white" />
+
+        <TextView
             android:id="@+id/list_item_high_textview"
-            android:gravity="center" />
-
-        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="New Text"
+            tools:text="Text"
+            android:textSize="72sp"
+            android:fontFamily="sans-serif-condensed"
+            android:textColor="@color/white" />
+
+        <TextView
             android:id="@+id/list_item_low_textview"
-            android:gravity="center" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:text="Text"
+            android:textSize="36sp"
+            android:fontFamily="sans-serif-condensed"
+            android:textColor="@color/white" />
 
     </LinearLayout>
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:gravity="center_horizontal"
-        android:layout_weight="1">
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal|bottom"
+        android:layout_weight="3">
 
         <ImageView
+            android:id="@+id/list_item_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/list_item_icon"
-            android:src="@mipmap/ic_launcher" />
+            android:layout_gravity="center_horizontal"
+            tools:src="@mipmap/ic_launcher" />
 
         <TextView
+            android:id="@+id/list_item_forecast_textview"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="New Text"
-            android:id="@+id/list_item_forecast_textview"
-            android:gravity="center" />
+            android:layout_gravity="center_horizontal"
+            tools:text="New Text"
+            android:fontFamily="sans-serif-condensed"
+            android:textAppearance="?android:textAppearanceLarge"
+            android:textColor="@color/white" />
 
     </LinearLayout>
+
 </LinearLayout>
